Reworked intro page, added logos, update to styling. Also, fixing spacing issue on vscode version

--- a/vscode-portfolio/src/styles/intro/intro-main.css
+++ b/vscode-portfolio/src/styles/intro/intro-main.css
@@ -103,8 +103,31 @@
   margin-top: 50px;
   margin-bottom: 50px;
   clip-path: polygon(0 0, calc(100% - 30px) 0, 100% 30px, 100% 100%, 30px 100%, 0 calc(100% - 30px));
-  height: 300px;
+  /* height: 300px; */
   overflow: hidden;
+  font-family: 'Audiowide', monospace;
+  padding: 5%;
+  z-index: 1;
+}
+
+
+/* Each sections title */
+.introSection h2 {
+  align-self: center;
+}
+
+/* Sections logos */
+.techDiv {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.techLogo {
+  width: 50px;
+}
+
+.invert {
+  filter: invert(1);
 }
 
 /* Binary lines */
@@ -115,22 +138,35 @@
   animation: moveBinary 5s linear infinite;
   font-size: 20px;
   font-family: 'Audiowide', monospace;
+  opacity: 15%;
+  margin-left: -40px;
+  position: absolute;
+  top: 0;
 }
 
 /* Hero */
 .introHero {
-  height: 900px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.introLeftWire{
-  width: 30%;
-  max-width: 200px;
+.introImgContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.introRightWire{
+  width: 200px;
+  height: 165px;
+  rotate: -45deg;
+  padding-top: 70px;
 }
 
 .introBothWire {
-  width: 30%;
-  max-width: 150px;
+  width: 150px;
   transform: scaleY(-1);
   rotate: -45deg;
 }
@@ -141,6 +177,7 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
+  margin-top: -25%;
 }
 
 .headshotImg {
@@ -153,25 +190,71 @@
 
 /* VSCODE */
 .introVscode {
-  background-color: var(--color-background-dark);
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
+  position: relative;
+  background-color: white;
+}
+
+.introVscode::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-background-light);
+  transform: translate(-10px, -10px);
+  z-index: -1;
 }
 
 /* UXUI */
 .introUxui {
-  background-color: white;
+  position: relative;
+  background-color: var(--color-background-dark);
 }
+
+.introUxui::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  transform: translate(-10px, -10px);
+  z-index: -1;
+}
+
 .uxuiRightWire {
   width: 30%;
+  position: absolute;
+  right: 10px;
 }
 
 /* BACKEND */
+
 .introBackend {
+  position: relative;
+  background-color: white;
+}
+
+.introBackend::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: black;
+  transform: translate(-10px, -10px);
+  z-index: -1;
 }
 
 .backendLeftWire {
   width: 25%;
   filter: invert(100%);
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  rotate: 45deg;
 }
 
