--- a/vscode-portfolio/src/styles/vs-code/vs-main.css
+++ b/vscode-portfolio/src/styles/vs-code/vs-main.css
@@ -30,7 +30,7 @@
 
 /* All main content or "files" */
 .vs-code section {
-  width: 95%;
+  width: 100%;
   height: 100%;
   padding-left: 2.5%;
   padding-right: 2.5%;
